appdeploy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: noel-gateway
  namespace: noel-ns
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:     
          from: All

---

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deploy
  namespace: uni-ns
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-uni
          persistentVolumeClaim:
            claimName: mysql-uni-pvc
        - name: mysql-init-uni
          configMap:
            name: mysql-uni-init
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-uni
              mountPath: /var/lib/mysql
            - name: mysql-init-uni
              mountPath: /docker-entrypoint-initdb.d
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: uni-ns
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP


---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: uni-grant
  namespace: uni-ns
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: noel-ns
  to:
    - group: ""
      kind: Service


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-deploy
  namespace: uni-ns
  labels:
    app: uni
spec:
  replicas: 4
  selector:
    matchLabels:
      app: uni
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: uni
    spec:
      containers:
        - name: uni-container
          image: nmc9812/uni:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: uni-service
  namespace: uni-ns
spec:
  selector:
    app: uni
  ports:
    - port: 83
      targetPort: 3000
  type: NodePort

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uni-route
  namespace: noel-ns
spec:
  parentRefs:
    - name: noel-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /uni
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: uni-service
          namespace: uni-ns
          port: 83
